--- a/01. Web Fundamentals - HTML, CSS/Lab/lab/pr13_contact-us-form.html
+++ b/01. Web Fundamentals - HTML, CSS/Lab/lab/pr13_contact-us-form.html
@@ -8,20 +8,28 @@
 <body>
 <h1>Contact Us</h1>
 <form>
-    <span>First Name:</span>
-    <input type="text" name="first_name" placeholder="First Name" required/><br/>
-    <span>Last Name:</span>
-    <input type="text" name="last_name" placeholder="Last Name" required/><br/>
-    <span>Email:</span>
-    <input type="email" name="email" placeholder="Email" required/><br/>
-    <span>Town:</span>
-    <label>
-        <select name="town">
-            <option value="1">Sofia</option>
-            <option value="2">Plovdiv</option>
-            <option value="3">Varna</option>
-        </select>
-    </label><br/>
+    <div>
+        <span>First Name:</span>
+        <input type="text" name="first_name" placeholder="First Name" required/>
+    </div>
+    <div>
+        <span>Last Name:</span>
+        <input type="text" name="last_name" placeholder="Last Name" required/>
+    </div>
+    <div>
+        <span>Email:</span>
+        <input type="email" name="email" placeholder="Email" required/>
+    </div>
+    <div>
+        <span>Town:</span>
+        <label>
+            <select name="town">
+                <option value="1">Sofia</option>
+                <option value="2">Plovdiv</option>
+                <option value="3">Varna</option>
+            </select>
+        </label>
+    </div>
     <input type="reset" value="Reset"/>
     <input type="submit" value="Submit"/>
 </form>
