--- a/01. Web Fundamentals - HTML, CSS/Lab/lab/pr07_fruits.html
+++ b/01. Web Fundamentals - HTML, CSS/Lab/lab/pr07_fruits.html
@@ -5,33 +5,33 @@
     <title>Fruits</title>
     <style>
         img {
-            width: 50px;
-            height: 50px;
+            width: 18%;
+            height: 18%;
         }
     </style>
 </head>
 <body>
 <h1>Fruits</h1>
 <p>
-    <img src="images/banana.png">
-    <img src="images/orange.png">
-    <img src="images/kiwi.png">
-    <img src="images/kiwi.png">
-    <img src="images/apple.png">
+    <img src="images/banana.png"/>
+    <img src="images/orange.png"/>
+    <img src="images/kiwi.png"/>
+    <img src="images/kiwi.png"/>
+    <img src="images/apple.png"/>
 </p>
 <p>
-    <img src="images/apple.png">
-    <img src="images/apple.png">
-    <img src="images/banana.png">
-    <img src="images/kiwi.png">
-    <img src="images/orange.png">
+    <img src="images/apple.png"/>
+    <img src="images/apple.png"/>
+    <img src="images/banana.png"/>
+    <img src="images/kiwi.png"/>
+    <img src="images/orange.png"/>
 </p>
 <p>
-    <img src="images/orange.png">
-    <img src="images/banana.png">
-    <img src="images/orange.png">
-    <img src="images/orange.png">
-    <img src="images/apple.png">
+    <img src="images/orange.png"/>
+    <img src="images/banana.png"/>
+    <img src="images/orange.png"/>
+    <img src="images/orange.png"/>
+    <img src="images/apple.png"/>
 </p>
 </body>
 </html>
