--- a/01. Web Fundamentals - HTML, CSS/Lab/lab/pr08_contact.html
+++ b/01. Web Fundamentals - HTML, CSS/Lab/lab/pr08_contact.html
@@ -12,8 +12,12 @@
 <body>
 <h1>Contact Us</h1>
 <form>
-    <label>First name:</label><input type="text" name="first name" placeholder="First name"/><br/>
-    <label>Second name:</label><input type="text" name="second name" placeholder="Second name"/><br/>
+    <div>
+        <label>First name:</label><input type="text" name="first name" placeholder="First name"/>
+    </div>
+    <div>
+        <label>Second name:</label><input type="text" name="second name" placeholder="Second name"/>
+    </div>
     <input type="submit" value="Submit"/>
 </form>
 </body>
