--- a/Javache/src/main/resources/pages/index.html
+++ b/Javache/src/main/resources/pages/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Javache Web Server</title>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 </head>
 <body>
     <h1>Welcome from Javache Web Server</h1>
@@ -11,6 +12,11 @@
 
     <p>Play around!</p>
     <p>This is me:</p>
-    <img src="../assets/web-server.png" width="100" height="100">
+    <img src="png/web-server.png" width="100" height="100">
+    <img src="ico/sun.ico" width="100" height="100">
+    <hr/>
+    <p><a href="dodo">To Dodo page</a></p>
+    <p><a href="toto">To Toto page</a></p>
+    <p><a href="login">To Login page</a></p>
 </body>
 </html>
