--- a/Javache/src/main/resources/pages/dodo.html
+++ b/Javache/src/main/resources/pages/dodo.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Dodo</title>
+    <style>
+        img {
+            display: inline-block;
+        }
+    </style>
 </head>
 <body>
 <h1>This is Dodo</h1>
 <img src="jpg/dodo.jpg" alt="dodo.png"/>
-<hr>
 <img src="gif/giphy.gif" alt="giphy.gif"/>
 <p><a href="/">To Home</a></p>
 </body>
